# bugbox

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: Dockerfile  requirements.txt
app/bugbox/: __init__.py  about.py  auth.py  collab.py  db.py  issue.py
app/bugbox/templates/: about.html  base.html
app/bugbox/templates/auth/: base.html  login.html  register.html
app/bugbox/templates/collab/: index.html
app/bugbox/templates/error/: 404.html  base.html
app/bugbox/templates/issue/: create.html  details.html  index.html
bugbox/: __init__.py  auth.py  blog.py  collab.py  dash.py  db.py  issue.py  schema.sql  team.py
bugbox/static/: index.js  styles.css
bugbox/templates/: about.html  base.html
bugbox/templates/auth/: base.html  login.html  register.html
bugbox/templates/blog/: update.html
bugbox/templates/collab/: index.html
bugbox/templates/dash/: index.html  update.html
bugbox/templates/error/: denied.html
bugbox/templates/issue/: create.html  details.html  index.html  update.html
db-init/: 00_log.sh  01_schema.sql  02_data.sql  data-query-generator.py
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
